<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    tools:context="com.androideduio.awesomephonedirectory.fragment.SecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/fragment_second_editText_edtAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Ad"
                android:inputType="text"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_soyad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/fragment_second_editText_edtSoyad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Soyad"
                android:inputType="text"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/fragment_second_editText_edtTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Telefon"
                android:inputType="phone"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/fragment_second_editText_edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Mail"
                android:inputType="textEmailAddress"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_adres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/fragment_second_editText_edtAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Adres"
                android:inputType="textPostalAddress"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cinsiyet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/fragment_second_spinner_spCinsiyet"
                style="@android:style/Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/hint_Cinsiyet" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fragment_second_button_btnKaydet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/buttonstyleselector"
            android:enabled="false"
            android:text="Kaydet"
            android:textColor="@color/siyah" />


    </LinearLayout>

</ScrollView>
