<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.androideduio.awesomephonedirectory.activity.UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_user_textview_bilgiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Bilgiler"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_user_input_layout_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_user_edittext_edtAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/hint_Ad"
                android:inputType="text"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_user_input_layout_soyad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_user_edittext_edtSoyad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/hint_Soyad"
                android:inputType="text"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_user_input_layout_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_user_edittext_edtTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/hint_Telefon"
                android:inputType="phone"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_user_input_layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_user_edittext_edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/hint_Mail"
                android:inputType="textEmailAddress"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_user_input_layout_adres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_user_edittext_edtAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/hint_Adres"
                android:inputType="textPostalAddress"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cinsiyet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/activity_user_spinner_spCinsiyet"
                style="@android:style/Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:prompt="@string/hint_Cinsiyet" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_user_button_btnGuncelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/arkaPlan"
                android:text="Güncelle"
                android:textColor="@color/siyah" />

            <Button
                android:id="@+id/activity_user_button_btnSil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/butonArkaPlan"
                android:text="Sil"
                android:textColor="@color/siyah" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
